--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link type="text/css" rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-  <link rel="icon" href="./favicon.png" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <link type="text/css" rel="stylesheet" href="./resources/css/style.css">
 </head>
 <body>
@@ -23,8 +23,6 @@
       </div>
     </div>
   </div>
-
-
 
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
